Fix header z-index
For laptop screen size - complete

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,6 +38,7 @@ html {
 
 header {
   position: fixed;
+  z-index: 1;
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
